fix: Incorrect alignment of index.html file when story title is too long (#39)

--- a/serenity-report-resources/src/main/resources/report-resources/css/core.css
+++ b/serenity-report-resources/src/main/resources/report-resources/css/core.css
@@ -1091,6 +1091,7 @@ h4 {
 
 .ellipsis {
     white-space: nowrap;
+    width: 55em;
     overflow: hidden;
     text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
